--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -98,6 +98,8 @@ $code-font-line-height-win: 20px;
 $margin: 9pt;
 $border-thickness: 1px;
 $corner-small: 8px;
+$animation-fast: .2s;
+$animation-slow: .5s;
 
 /**
  * Functions
