--- a/src/Styles/_markdown.scss
+++ b/src/Styles/_markdown.scss
@@ -22,6 +22,10 @@ pre {
   line-height: $code-font-line-height-win;
 }
 
+.markdown p {
+    margin-left: 1.4em;
+}
+
 .markdown p:first-of-type {
     margin-top: -0.6em;
 }
