--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -20,7 +20,7 @@
     var starTip = (story.starsReadOnly ? "times starred" : "star this story");
     var starAriaDisabled = story.starsReadOnly.ToString();
 
-<div class="article" data-id="@storyId">
+<article data-id="@storyId">
     <!-- Story heading -->
     <h2>
         <!-- Title and Permalink -->
@@ -241,5 +241,5 @@
             </div>
         </div>
     </div>
-</div>
+</article>
 }
