Fix metadata offset

--- a/src/Styles/_metadata.scss
+++ b/src/Styles/_metadata.scss
@@ -2,6 +2,7 @@
   font-family: $small-font;
   font-size: $small-font-size;
   color: $secondary-text-color;
+  margin-left: 1.4em;
   margin-top: -6pt;
   line-height: $small-font-line-height;
 }
