Metadata retarget style

--- a/src/Styles/_metadata.scss
+++ b/src/Styles/_metadata.scss
@@ -2,9 +2,12 @@
   font-family: $small-font;
   font-size: $small-font-size;
   color: $secondary-text-color;
-  margin-left: 1.4em;
   margin-top: -6pt;
   line-height: $small-font-line-height;
+}
+
+article > .metadata {
+  margin-left: 1.4em;
 }
 
 .os-win .metadata {
