Fix #134 Star animation broken on IE

--- a/src/Styles/_comments.scss
+++ b/src/Styles/_comments.scss
@@ -29,11 +29,7 @@
 }
 
 .comment:hover {
-  background-color: $accent-highlight-color;
-}
-
-.os-win .comment:hover {
-  background-color: $accent-color;
+  background-color: $accent-light-color;
 }
 
 .os-win.hi-dpi .comment:hover {
