Fix #134 batch comments and views

--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -118,8 +118,7 @@
     </div>
     
     <!-- Story comments -->
-    <div class="comments"
-        data-ng-init="news.loadComments(@storyId)">
+    <div class="comments">
         <span class="metadata"
             data-ng-show="news.comments[@storyId].length">
             
