Fix #140 Google fonts not loading in Safari

--- a/src/Styles/_media.desktop.scss
+++ b/src/Styles/_media.desktop.scss
@@ -159,6 +159,7 @@ main {
   width: calc(100% - 22px);
   margin-left: 22px;
   font-family: $normal-font;
+  font-weight: $normal-font-weight;
   font-size: $normal-font-size;
 }
 
@@ -231,6 +232,7 @@ main h2,
 main h3,
 main h4 {
   font-family: $heading-font;
+  font-weight: $heading-font-weight;
   margin-bottom: $margin;
   margin-top: $margin;
 }
