Comment form styles

--- a/src/Styles/_comments.scss
+++ b/src/Styles/_comments.scss
@@ -177,20 +177,39 @@
 }
 
 .comment-form {
-  visibility: none;
-  opacity: 0;
-  transition: transform $animation-fast ease-out, opacity $animation-fast ease-out, margin $animation-fast ease-out;
+  display: none;
+  //transition: transform $animation-fast ease-out, opacity $animation-fast ease-out, margin $animation-fast ease-out;
+  animation: fadeOut;
   margin-top: -4px;
   margin-bottom: -40px;
   transform: translateY(40px);
 }
-
 .comment-form--active {
-  visibility: visible;
-  opacity: 1;
   margin-top: -4px;
   margin-bottom: -5px;
   transform: translate(0px);
+  animation: fadeIn;
+}
+
+@keyframes fadeIn {
+  0% {
+    display: block;
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  99% {
+    opacity: 0;
+  }
+
+  100% {
+    display: none;
+  }
 }
 
 .comment-error {
