Fix #122 PC fonts

--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -55,14 +55,14 @@ $title-font: Consolas, Menlo, monospace;
 $title-font-size: 12pt;
 $title-font-weight: normal;
 
-$heading-font: "Open Sans", "Helvetica Neue", Verdana, sans-serif;
+$heading-font: "Open Sans", "Helvetica Neue", Arial, sans-serif;
 $heading-font-weight: 600;
 $heading-font-size-large: 13.5pt;
 $heading-font-size-medium: 13pt;
 $heading-font-size-small: 12pt;
 $heading-font-size-smaller: 11.5pt;
 
-$normal-font: "Open Sans", Verdana, Arial, sans-serif;
+$normal-font: "Open Sans", Arial, sans-serif;
 $normal-font-weight: 400;
 $normal-font-size: 12pt;
 $navigation-font-size: 10pt;
