--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -37,6 +37,7 @@
                 role="@starRole"
                 data-tooltip="@starTip"
                 data-tooltip-offset-left="-1"
+                data-tooltip-offset-top="2"
                 data-tooltip-offset-bottom="4"
                 area-disabled="@starAriaDisabled"
                 data-src="images/banner.svg#star"
