Adjust comment spacing

--- a/src/Styles/_comments.scss
+++ b/src/Styles/_comments.scss
@@ -215,7 +215,7 @@
   transition: transform $animation-fast ease-out, opacity $animation-slow ease-out, margin $animation-fast ease-out;
   transition-delay: $animation-fast;
   margin-left: 16px;
-  margin-top: -20px;
+  margin-top: -14pt;
 }
 
 .comment-form--active .comment-error--active {
