--- a/src/Styles/_forms.scss
+++ b/src/Styles/_forms.scss
@@ -1,3 +1,5 @@
+// TODO: refactor signup css and delete these
+
 .form-spacer-right {
   float: right;
   width: 4px;
@@ -14,17 +16,6 @@
   float: left;
   width: 11pt;
   min-height: 10pt;
-}
-
-.form-inline {
-  display: inline;
-}
-
-.form-group {
-  position: relative;
-  overflow: hidden;
-  padding: 3px;
-  margin-bottom: 10pt;
 }
 
 .form-input {
