Fix tag background transition and refactor tags

--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -109,7 +109,7 @@
         <span class="tags">
         @foreach (var tag in story.tags)
         {
-            <a class="tag" data-fade>@Shared.FormatTag(tag)</a>
+            <a class="tag">@Shared.FormatTag(tag)</a>
         }
         </span>
     </section>
