--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -188,8 +188,7 @@
                     data-tooltip-offset-x="-4"
                     data-tooltip-offset-y="6"
                     data-ng-show="!news.user"
-                    data-ng-click="news.login()"
-                    data-fade>
+                    data-ng-click="news.login()">
                     <icon class="icon-button"
                         data-src="images/social.svg#@loginProvider.DisplayName.ToLower()"
                         data-width="16"
