Fix margin order

--- a/src/Styles/_comments.scss
+++ b/src/Styles/_comments.scss
@@ -13,7 +13,7 @@
 .comments {
   font-family: $small-font;
   font-size: $small-font-size;
-  margin: -.25em 1.5em 0 0;
+  margin: -.25em 0 0 1.5em;
   clear: both;
 }
 
